2006-03-10  Neil Williams <linux@codehelp.co.uk>

	* Makefile.am : Add HACKING to dist.
	* backend/file/pilot-qsf-GnuCashInvoice.xml :
	update objects - the file may still be removed in a 
	future release.
	* backend/file/qsf-backend.c : remove uneven 
	debug call
	* backend/file/qsf-xml-map.c : improve debug handling
	* fink/qof1.info : Update library SONAMES for packaging.
	* qof/qofbackend.c : 
	* qof/qof.h : Finalise module loading. Downgrade the reliance
	on the .la files for backends.
	* rpm/qof1.spec : Missed some symlinks.

2006-01-01  Neil Williams <linux@codehelp.co.uk>

	* qof/qofobject.c : 
	* qof/qofobject-p.h : New function to check full
	compliance of an object once instead of failing
	repeatedly.
	* qof/qofsession.c : Check we can create an object
	before attempting.

2005-12-29  Neil Williams <linux@codehelp.co.uk>

	Typo in FSF address corrected.
	* various :

	* qof/guid.c : Support glib 2.9.0 improvement

2005-12-29  Neil Williams <linux@codehelp.co.uk>

	* qof/deprecated.c : New file to preserve deprecated function
	names into the binary for compatibility until libqof2.
	* qof/Makefile.am : New file compiled into libqof1.

	Changes to use qof.h
	* backend/file/qsf-backend.c : 
	* backend/file/qsf-xml-map.c :
	* backend/file/qsf-xml.c :
	* qof/deprecated.h :
	* qof/gnc-event.c :
	* qof/guid.c :
	* qof/kvp_frame.c :
	* qof/qof_book_merge.c :
	* qof/qofbackend.c :
	* qof/qofbook.c :
	* qof/qofclass.c :
	* qof/qofid.c :
	* qof/qofinstance.c :
	* qof/qofobject.c :
	* qof/qofquery.c :
	* qof/qofquerycore.c :
	* qof/qofsession.c :
	* qof/qofsql.c :

2005-12-28  Neil Williams <linux@codehelp.co.uk>

	* qof/qofbackend.c : Allow partial paths to make 
	full use of GModule and the lack of a .la file 
	non-critical.
	* autogen.sh : Adopt a more streamlined script.
	
2005-12-18  Neil Williams <linux@codehelp.co.uk>

	* configure.in : Adding extra compiler warnings.
	* qof/gnc-engine-util.h : Deprecating HAVE_SCANF_LLD
