@@ -2,6 +2,7 @@ Makefile
 Makefile.in
 Makefile.in.in
 POTFILES
+POTFILES.in
 *.pot
 *.gmo
 
