@@ -1,8 +1,0 @@
-# List of files which containing translatable strings.
-# This file was generated by ../make-potfiles.in.
-
-backend/dwi/dwi-backend.c
-backend/dwi/qofmap.c
-backend/file/qsf-backend.c
-backend/file/qsf-xml-map.c
-backend/file/qsf-xml.c
