@@ -28,6 +28,8 @@
 <li><a href="why-qof.html">Why QOF?</a></li>
 <li><a href="http://www.data-freedom.org/">Data Freedom</a></li>
 <li><a href="#support">Support</a></li>
+<li><a href="http://www.iro.umontreal.ca/translation/registry.cgi?domain=qof">
+Translation</a></li>
 </ul>
 </div>
 <div><img src="qof-logo.jpg" id="qoflogo" alt="image based on the hebrew
